src/blocks/profile.css
.profile {
  display: flex;
  padding: 34px 0 20px;
  border-bottom: 1px rgb(33, 33, 33, 0.4) solid;
}

.profile__avatar-container {
  position: relative;
  margin-right: 20px;
}

.profile__avatar-btn {
  position: absolute;
  left: 0;
  bottom: 0;
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: row; /*flex-direction: row makes the pencil icon and the text "Edit Avatar" appear in a row instead of a column*/
  justify-content: center; /*justify-content: center centers the pencil icon horizontally in the avatar image*/
  align-items: flex-end; /*align-items: flex-end moves the pencil icon to the bottom of the avatar image*/
  gap: 8px;
  padding-bottom: 12px;
  box-sizing: border-box;
  border: 0;
  background: transparent;
  visibility: hidden;
}

.profile__avatar-btn picture,
.profile__pencil-icon {
  display: inline-block;
  width: 18.48px;
  height: 16px;
  object-fit: contain;
}

.profile__avatar-container:hover .profile__avatar-btn {
  visibility: visible;
  cursor: pointer;
}

.profile__avatar-btn::after {
  content: "Edit Avatar";
  color: white;
}

.profile__avatar {
  /* margin-right: 20px; */
  border-radius: 8px;
  height: 190px;
  width: 190px;
  /*height and width was added because of the media quieries*/
}

.profile__column {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}

.profile__name {
  margin: 0 0 12px;
  font-weight: 500;
  /*I searched font weight for medium on google and it said 500 so I added font-weight: 500 individually to the ones that have a medium font weight. Because if I type in just medium the browser keeps overriding the default browser's medium font snd it looks too bold which is not what we want for this project*/
  font-size: 32px;
  line-height: 1;
  color: #212121;
  text-overflow: ellipsis;
  overflow: hidden;
  display: -webkit-box;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
  max-width: 420px;
  padding-bottom: 4px;
  /*I added this padding which wasn't in figma design so that the bottom part of the letters (ex. g) won't get cut off*/
}

.profile__description {
  margin: 0;
  color: #212121;
  opacity: 70%;
  font-weight: 500;
  font-size: 16px;
  line-height: 1;
  text-overflow: ellipsis;
  overflow: hidden;
  display: -webkit-box;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
  max-width: 420px;
  padding-bottom: 2px;
  /*I added this padding which wasn't in figma design so that the bottom part of the letters (ex. g) won't get cut off*/
}

.profile__edit-btn {
  margin-top: auto;
  border: none;
  background-color: transparent;
  padding: 0;
  display: flex;
  gap: 7px;
  color: #212121;
  opacity: 70%;
  font-weight: 500;
  font-size: 16px;
  line-height: 1;
  transition: opacity 0.2s;
  cursor: pointer;
}

.profile__edit-btn:hover {
  opacity: 1;
}

.profile__add-btn {
  margin-left: auto;
  /*adding margin-left: auto pushes the new post button to the right after adding display flex*/
  background-color: #212121;
  color: #fcf5e5;
  width: 149px;
  height: 52px;
  display: flex;
  justify-content: center;
  align-items: center;
  /*justify content and align items centers the text inside the box. But remember that you have to make it a flex box first*/
  align-self: end;
  /*you could also use margin-top: auto instead of align-self: end to make the button move from the top to the bottom to make it align with the other button on the far left*/
  gap: 8px;
  /*note that you need flexbox to add gap*/
  border-radius: 8px;
  border: none;
  font-weight: 500;
  font-size: 16px;
  line-height: 1;
  transition: opacity 0.2s;
  cursor: pointer;
}

.profile__add-btn:hover {
  opacity: 0.8;
}

@media screen and (max-width: 627px) {
  .profile {
    flex-direction: column;
    max-width: 288px;
    align-items: center;
    text-align: center;
    padding-top: 20px;
  }

  .profile__avatar {
    margin-right: 0;
    width: 80px;
    height: 80px;
    margin: 0 0 12px;
  }

  .profile__avatar-container {
    margin: auto;
  }

  /* finish mobile avatar button styling below????*/
  /******* GOOD TO KNOW: What changed everything and made the button set on the bottom right was applying proper width of pencil icon on mobile from figma. Basically look at width first. Change justify content or align items if necessary for mobile. then apply figma styling like top, bottom px and padding *******/
  .profile__avatar-btn {
    height: 24px;
    width: 24px;
    align-items: flex-start;
    top: 52px;
    left: 52px;
    padding: 0 0 4px 4px;
  }

  /*set content of ::after element to "" */
  .profile__avatar-btn::after {
    content: "";
  }

  .profile__column {
    justify-content: center;
    align-items: center;
  }

  .profile__name {
    margin: 0 0 6px;
    font-size: 20px;
    max-width: 288px;
  }

  .profile__description {
    margin: 0 0 32px;
    max-width: 288px;
  }

  .profile__edit-btn {
    margin: 0 0 20px;
  }

  .profile__add-btn {
    margin: 0;
    width: 100%;
  }
}

